Add homepage with feature row and hero intro

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 ---
 layout: home
 author_profile: true
+title: "Welcome to My Portfolio"
 header:
   overlay_color: "#000"
   overlay_filter: "0.3"
   overlay_image: /assets/images/header-bg.jpg
-  caption: "Job Hunt OS Portfolio"
-excerpt: "First-Class Mathematics Grad | SQL & Python | AI/ML Enthusiast"
-intro: 
-  - text: "Welcome! I’m Ardit — a learner, builder, and aspiring AI professional."
-  - text: "This site showcases my portfolio projects, learning path, and tools from my career transition."
+  caption: "Exploring AI, Python, and Reasoning Systems"
+excerpt: "First-Class Mathematics Graduate | Python Developer | AI Learner"
+feature_row:
+  - image_path: /assets/images/quiz-game-teaser.png
+    alt: "Quiz Game CLI"
+    title: "Quiz Game CLI"
+    excerpt: "A command-line Python quiz game that scrapes questions and uses fuzzy matching for answers."
+    url: "/projects/quiz-game-cli"
+    btn_label: "View Project"
+    btn_class: "btn--primary"
+  - image_path: /assets/images/arithmetic-formatter.png
+    alt: "Arithmetic Formatter"
+    title: "Arithmetic Formatter"
+    excerpt: "A beginner-friendly CLI tool to format arithmetic problems—part of a FreeCodeCamp challenge."
+    url: "/projects/arithmetic-formatter"
+    btn_label: "View Project"
+    btn_class: "btn--primary"
+  - image_path: /assets/images/python-notebooks.png
+    alt: "Python Core Notebooks"
+    title: "Python Core Notebooks"
+    excerpt: "A curated set of Jupyter notebooks documenting my learning in Python, NumPy, and Pandas."
+    url: "/projects/python-core-notebooks"
+    btn_label: "View Project"
+    btn_class: "btn--primary"
 ---
+
+Welcome to my developer portfolio.
+
+I'm Ardit — a former technical support analyst with a First-Class Mathematics degree, transitioning into AI and data-driven development. This site highlights the projects, notebooks, and tools I've built using my Job Hunt OS — a structured approach to upskilling, experimentation, and career alignment.
+
+Below are some featured projects. Explore more on the [Projects](/projects/) page.
