Changed layout to home (testing)

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 ---
-layout: splash
+layout: home
 title: "Welcome to My Portfolio"
 header:
 overlay_color: "#000"
 overlay_filter: "0.3"
-overlay_image: /assets/images/header-bg.jpg
+overlay_image: /assets/images/images.png
 caption: "Exploring AI, Python, and Reasoning Systems"
 excerpt: "First-Class Mathematics Graduate | Python Developer | AI Learner"
 feature_row:
-- image_path: https://via.placeholder.com/400x200
+- image_path: /assets/images/images.png
 alt: "Quiz Game CLI"
 title: "Quiz Game CLI"
 excerpt: "A command-line Python quiz game that scrapes questions and uses fuzzy matching for answers."
 url: "/projects/quiz-game-cli"
 btn_label: "View Project"
 btn_class: "btn--primary"
-- image_path: https://via.placeholder.com/400x200
+- image_path: /assets/images/images.png
 alt: "Arithmetic Formatter"
 title: "Arithmetic Formatter"
 excerpt: "A beginner-friendly CLI tool to format arithmetic problems—part of a FreeCodeCamp challenge."
 url: "/projects/arithmetic-formatter"
 btn_label: "View Project"
 btn_class: "btn--primary"
-- image_path: https://via.placeholder.com/400x200
+- image_path: /assets/images/images.png
 alt: "Python Core Notebooks"
 title: "Python Core Notebooks"
 excerpt: "A curated set of Jupyter notebooks documenting my learning in Python, NumPy, and Pandas."
