--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
-layout: home
-author_profile: true
+layout: splash
 title: "Welcome to My Portfolio"
 header:
   overlay_color: "#000"
-  overlay_filter: "0.3"
+  overlay_filter: "0.2"
   overlay_image: /assets/images/header-bg.jpg
-  caption: "Exploring AI, Python, and Reasoning Systems"
-excerpt: "First-Class Mathematics Graduate | Python Developer | AI Learner"
+  caption: "From Python Basics to AI Exploration"
+excerpt: "Python · AI · Data"
 feature_row:
   - image_path: /assets/images/quiz-game-teaser.png
     alt: "Quiz Game CLI"
