--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Welcome to My Portfolio"
 header:
   overlay_color: "#000"
   overlay_filter: "0.2"
-  overlay_image: /assets/images/header-bg.jpg
+  overlay_image: /assets/images/header-bg.png
   caption: "From Python Basics to AI Exploration"
 excerpt: "Python · AI · Data"
 feature_row:
