--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@ permalink: /
 ---
 
 <style>
+  html,
   body {
+    height: 100%;
     margin: 0;
     padding: 0;
+  }
+
+  .page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  .main-wrapper {
+    flex: 1;
   }
 
   .hero {
     background: url('/assets/images/header-bg.png') no-repeat center center;
     background-size: cover;
-    height: 90vh;
+    height: 85vh;
     position: relative;
   }
 
@@ -21,7 +33,7 @@ permalink: /
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 1rem 2rem;
     gap: 2rem;
   }
 
@@ -74,6 +86,12 @@ permalink: /
     width: 30%;
   }
 
+  .projects-scroll h2 {
+    text-align: center;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+  }
+
   footer {
     position: fixed;
     bottom: 0;
@@ -86,53 +104,66 @@ permalink: /
   }
 </style>
 
-<div class="hero"></div>
+<div class="page-container">
 
-<div class="main-content">
-  <div class="sidebar">
-    <img src="/assets/images/bio-photo.png" alt="Ardit Islami">
-    <h3>Ardit Islami</h3>
-    <p>Mathematics grad with real-world SQL support experience and a passion for Python + AI.</p>
-    <p>📍 UK<br>📧 <a href="mailto:arditislami.pro@gmail.com">Email</a><br>💼 <a href="https://linkedin.com/in/ardit-islami">LinkedIn</a><br>🐙 <a href="https://github.com/Ardit-Islami">GitHub</a></p>
+  <div class="hero">
   </div>
 
-  <div class="projects-scroll">
-    <div class="project-card">
-      <img src="/assets/images/quiz-game-teaser.png" alt="Quiz Game">
-      <div class="project-description">
-        <h3>Quiz Game CLI</h3>
-        <p>Command-line Python game scraping live questions and using fuzzy matching for answers.</p>
-        <a href="/projects/quiz-game-cli">View Project →</a>
+  <div class="main-wrapper">
+    <div class="main-content">
+      <div class="sidebar">
+        <img src="/assets/images/bio-photo.png" alt="Ardit Islami">
+        <h3>Ardit Islami</h3>
+        <p>Mathematics grad with real-world SQL support experience and a passion for Python + AI.</p>
+        <p>📍 UK<br>📧 <a href="mailto:arditislami.pro@gmail.com">Email</a><br>💼 <a
+            href="https://linkedin.com/in/ardit-islami">LinkedIn</a><br>🐙 <a
+            href="https://github.com/Ardit-Islami">GitHub</a></p>
+      </div>
+
+      <div class="projects-scroll">
+        <h2>My Favourite Projects</h2>
+
+        <div class="project-card">
+          <img src="/assets/images/quiz-game-teaser.png" alt="Quiz Game">
+          <div class="project-description">
+            <h3>Quiz Game CLI</h3>
+            <p>Command-line Python game scraping live questions and using fuzzy matching for answers.</p>
+            <a href="/projects/quiz-game-cli">View Project →</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="/assets/images/arithmetic-formatter.png" alt="Arithmetic Formatter">
+          <div class="project-description">
+            <h3>Arithmetic Formatter</h3>
+            <p>FreeCodeCamp-inspired CLI tool that formats and aligns arithmetic expressions.</p>
+            <a href="/projects/arithmetic-formatter">View Project →</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="/assets/images/python-notebooks.png" alt="Python Notebooks">
+          <div class="project-description">
+            <h3>Python Core Notebooks</h3>
+            <p>A curated collection of Jupyter notebooks showcasing my Python, NumPy, and Pandas learning.</p>
+            <a href="/projects/python-core-notebooks">View Project →</a>
+          </div>
+        </div>
+
+        <p class="cta-text">👉 <a href="/projects/">See the rest of my projects</a></p>
+      </div>
+
+      <div class="description-box">
+        <p><strong>Welcome to my developer portfolio.</strong><br>
+          I'm Ardit — a former technical support analyst with a First-Class Mathematics degree, transitioning into AI
+          and data-driven development. This site highlights the projects, notebooks, and tools I've built using my Job
+          Hunt OS — a structured approach to upskilling, experimentation, and career alignment.</p>
       </div>
     </div>
-
-    <div class="project-card">
-      <img src="/assets/images/arithmetic-formatter.png" alt="Arithmetic Formatter">
-      <div class="project-description">
-        <h3>Arithmetic Formatter</h3>
-        <p>FreeCodeCamp-inspired CLI tool that formats and aligns arithmetic expressions.</p>
-        <a href="/projects/arithmetic-formatter">View Project →</a>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <img src="/assets/images/python-notebooks.png" alt="Python Notebooks">
-      <div class="project-description">
-        <h3>Python Core Notebooks</h3>
-        <p>A curated collection of Jupyter notebooks showcasing my Python, NumPy, and Pandas learning.</p>
-        <a href="/projects/python-core-notebooks">View Project →</a>
-      </div>
-    </div>
-
-    <p class="cta-text">👉 <a href="/projects/">See the rest of my projects</a></p>
   </div>
 
-  <div class="description-box">
-    <p><strong>Welcome to my developer portfolio.</strong><br>
-    I'm Ardit — a former technical support analyst with a First-Class Mathematics degree, transitioning into AI and data-driven development. This site highlights the projects, notebooks, and tools I've built using my Job Hunt OS — a structured approach to upskilling, experimentation, and career alignment.</p>
-  </div>
+  <footer>
+    © 2025 Ardit Islami · Built with Jekyll
+  </footer>
+
 </div>
-
-<footer>
-  © 2025 Ardit Islami · Built with Jekyll
-</footer>
