--- a/index.html
+++ b/index.html
@@ -91,25 +91,13 @@ permalink: /
     margin-top: 0.5rem;
     margin-bottom: 1rem;
   }
-
-  footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 24px;
-    font-size: 0.8rem;
-    text-align: center;
-    color: #888;
-    background: none;
-  }
 </style>
 
-<div class="page-container">
+<div class="page-container" style="display: flex; flex-direction: column; min-height: 100vh;">
 
-  <div class="hero">
-  </div>
+  <div class="main-wrapper" style="flex: 1;">
+    <div class="hero"></div>
 
-  <div class="main-wrapper">
     <div class="main-content">
       <div class="sidebar">
         <img src="/assets/images/bio-photo.png" alt="Ardit Islami">
@@ -162,8 +150,6 @@ permalink: /
     </div>
   </div>
 
-  <footer>
-    © 2025 Ardit Islami · Built with Jekyll
-  </footer>
+  {% include footer.html %}
 
 </div>
