Further refinements and added content

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@ permalink: /
         to AI Exploration
       </h1>
       <p class="hero-subtitle">Python • AI • Data</p>
+      <div class="hero-value-block">
+        <p class="hero-value-prop">
+          Mathematics grad building AI tools that think like humans —<br>
+          from scripting logic to generative systems.
+        </p>
+        <p class="hero-tagline">I’m not just learning to code. I’m learning to reason with machines.</p>
+        <div class="hero-cta-buttons">
+          <a href="/projects/" class="cta-button">See Projects</a>
+          <a href="/growth-log/" class="cta-button">Read Growth Log</a>
+          <a href="/assets/docs/ardit-islami-cv.pdf" class="cta-button" target="_blank">Download CV</a>
+        </div>
+      </div>
     </div>
 
     <aside class="sidebar">
@@ -29,7 +41,7 @@ permalink: /
 
       <div class="content-area">
         <section class="projects-scroll">
-          <h2 class="projects-scroll-title">My Favourite Projects</h2>
+          <h2 class="projects-scroll-title">Featured Projects</h2>
           <div class="project-list">
             <div class="project-card">
               <img class="project-teaser" src="/assets/images/quiz-game-teaser.png" alt="Quiz Game Teaser">
