Making Nav Bar better and homepage responsivess testing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: "Ardit Islami – AI Portfolio" # Or your preferred title
 permalink: /
+classes: [home-page]
 ---
 
 <div class="page-container">
