--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@ permalink: /
         <p class="hero-tagline">I’m not just learning to code. I’m learning to reason with machines.</p>
         <div class="hero-cta-buttons">
           <a href="/projects/" class="cta-button">See Projects</a>
-          <a href="/growth-log/" class="cta-button">Growth Log</a>
-          <a href="/assets/docs/ardit-islami-cv.pdf" class="cta-button" target="_blank">Download CV</a>
+          <a href="/assets/files/Ardit Islami CV.pdf" class="cta-button" target="_blank">Download CV</a>
         </div>
       </div>
     </div>
