Use Windows copy of index.html (preferred content)

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ permalink: /
       <img src="/assets/images/bio-photo.png" alt="Ardit Islami" class="bio-photo">
       <h3>Ardit Islami</h3>
       <p>Mathematics grad with real-world SQL support experience and a passion for Python + AI.</p>
-      <p>📍 UK<br>📧 <a href="mailto:arditislami.pro@gmail.com">Email</a><br>💼 <a
-          href="https://linkedin.com/in/ardit-islami">LinkedIn</a><br>🐙 <a
+      <p>UK<br><a href="mailto:arditislami.pro@gmail.com">Email</a><br><a
+          href="https://linkedin.com/in/ardit-islami">LinkedIn</a><br><a
           href="https://github.com/Ardit-Islami">GitHub</a></p>
     </aside>
 
