deploy: 5c084ce3c80830e0377d114d44c1bda05d2e4463

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <aside class="sidebar">
   
-  <img src="/assets/images/bio-photo.png" alt="Ardit Islami" class="bio-photo">
+  <img src="/assets/images/bio-photo.jpg" alt="Ardit Islami" class="bio-photo">
   
 
   
