deploy: e95ec91406766f28ea3e55b3c99d3495a615b7da

--- a/projects/lineball-dashboard/index.html
+++ b/projects/lineball-dashboard/index.html
@@ -189,7 +189,7 @@ I later learned from resources like <a href="https://interworks.com/blog/rcurtis
 
 <p>Below is a preview of the dashboard. Click the image or the link below to view the interactive version on Tableau Public.</p>
 
-<p><a href="https://public.tableau.com/app/profile/ardit.islami/viz/LineBallStatistics/LineBallDashboard"><img src="/assets/images/lineball-thumbnail.png" alt="Lineball Dashboard Preview" /></a></p>
+<p><a href="https://public.tableau.com/app/profile/ardit.islami/viz/LineBallStatistics/LineBallDashboard"><img src="/assets/images/lineball-thumbnail.jpg" alt="Lineball Dashboard Preview" /></a></p>
 
 <p style="text-align: center; margin-top: 1rem;">
   <a href="https://public.tableau.com/app/profile/ardit.islami/viz/LineBallStatistics/LineBallDashboard" class="cta-button" target="_blank" rel="noopener noreferrer">
