--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@ page_css: homepage.css
   <div class="main-wrapper">
 
     <div class="hero-text-content">
-      <h1>
-        From Python Basics<br>
-        to AI Exploration
-      </h1>
-      <p class="hero-subtitle">Python • AI • Data</p>
+      <div class="hero-mission">
+        <p class="hero-subtitle">Mathematics • Data • Intelligence</p>
+      
+        <h1>
+          Tinkering with <span class="text-gradient">Systems</span>.<br>
+          Steered by <span class="text-gradient">Maths.</span>
+        </h1>
+      </div>
+
       <div class="hero-value-block">
         <p class="hero-value-prop">
-          Mathematics grad building AI tools that think like humans —<br>
-          from scripting logic to generative systems.
+          Mathematics graduate, head over heels with taming Data<br>
+          from CLI scripting to building foundations for AI workflows.
         </p>
-        <p class="hero-tagline">I’m not just learning to code. I’m learning to reason with machines.</p>
+        
+        <p class="hero-tagline">
+          <code>Learning becomes meaningful when it meets practice.</code><br>
+          <code>Have a look while you're here:</code>
+        </p>
+
         <div class="hero-cta-buttons">
-          <a href="/projects/" class="cta-button">See Projects</a>
+          <a href="/projects/" class="cta-button">View Work</a>
           <a href="/assets/files/Ardit Islami CV.pdf" class="cta-button" target="_blank">Download CV</a>
         </div>
       </div>
@@ -48,10 +57,11 @@ page_css: homepage.css
         </section>
 
         <section class="description-box">
-          <p><strong>Welcome to my developer portfolio.</strong><br>
-            I'm Ardit — a former technical support analyst with a First-Class Mathematics degree, transitioning into AI
-            and data-driven development. This site highlights the projects, notebooks, and tools I've built using my Job
-            Hunt OS — a structured approach to upskilling, experimentation, and career alignment.</p>
+          <p><strong>This space is my lab.</strong><br>
+              A place where I wish to digitise my progress, learning and slowly turn knowledge into tools.<br>
+              Every project here reflects something I'm learning, building, or figuring out... CLI apps, Streamlit dashboards, or a stub of an AI system.<br><br>
+              You won't find perfection, but steady evolution, real curiosity, and a love for making things work.
+            </p>
         </section>
       </div>
     </div>
